--- a/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
+++ b/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
@@ -8,7 +8,7 @@
   </div>
   <!-- Modal -->
   <div class="modal fade" id="segmentNameModal" tabindex="-1" role="dialog" aria-labelledby="segmentNameModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="segmentNameModalLabel">Save Segment as</h5>
