--- a/frontend/src/app/segment-category/segments/segments.component.html
+++ b/frontend/src/app/segment-category/segments/segments.component.html
@@ -28,7 +28,7 @@
           </span>
         </td>
         <td>{{segment.type}}</td>
-        <td>{{segment.creationDate}}</td>
+        <td>{{segment.creationDate | date:'medium'}}</td>
         <td></td>
       </tr>
       <tr *ngIf="toggleSegmentDetails[segment.id]">
