--- a/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
+++ b/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
@@ -7,7 +7,9 @@
       </form>
     </div>
     <div class="dropdown col-sm text-center">
-      <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button class="btn btn-primary dropdown-toggle"
+              type="button"
+              id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         New Campaign
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
