--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -1,6 +1,3 @@
-<h3 class="text-center">Service Providers</h3>
-
-
 <!--appuserID: number;
 serviceProviderType: ServiceProviderType;
 serviceProvider: ServiceProvider;
@@ -11,31 +8,45 @@ password: string;-->
 
 <!-- Button trigger modal -->
 <div class="text-right my-2 col-sm-11">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#serviceProviderModal">
-  + Add Service Provider
-</button>
+<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#serviceProviderModal">-->
+  <!--+ Add Service Provider-->
+<!--</button>-->
+  <button class="btn btn-primary dropdown-toggle mb-3"
+          type="button"
+          id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   + Add Service Provider
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item"
+       data-target="#serviceProviderModal"
+       data-toggle="modal"
+       *ngFor="let serviceProviderType of serviceProviderTypes"
+       (click)="onChangeServiceProviderType(serviceProviderType)">{{serviceProviderType}}</a>
+  </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="serviceProviderModal" tabindex="-1" role="dialog" aria-labelledby="serviceProviderModalLabel" aria-hidden="true">
+<div *ngIf="serviceProviders.length>0"
+  class="modal fade" id="serviceProviderModal" tabindex="-1" role="dialog" aria-labelledby="serviceProviderModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="serviceProviderModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="serviceProviderModalLabel">{{serviceProviderCredentials.serviceProviderType}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body py-2 px-5">
         <div>
           <form novalidate (ngSubmit)="onSave(f)" #f="ngForm">
             <div class="form-group">
-              <label for="serviceProviderType">Service Provider Type</label>
-              <select required class="form-control" id="serviceProviderType" name="serviceProviderType"
-                      [(ngModel)]="serviceProviderCredentials.serviceProviderType" (change)="onChangeServiceProviderType()">
-                <option *ngFor="let serviceProviderType of serviceProviderTypes" value="{{serviceProviderType}}">
-                  {{serviceProviderType}}
-                </option>
-              </select>
+              <!--<label for="serviceProviderType">Service Provider Type</label>-->
+              <!--<select required class="form-control" id="serviceProviderType" name="serviceProviderType"-->
+                      <!--[(ngModel)]="serviceProviderCredentials.serviceProviderType"-->
+                      <!--(change)="onChangeServiceProviderType()">-->
+                <!--<option *ngFor="let serviceProviderType of serviceProviderTypes" value="{{serviceProviderType}}">-->
+                  <!--{{serviceProviderType}}-->
+                <!--</option>-->
+              <!--</select>-->
             </div>
             <div class="form-group">
               <label for="serviceProvider">Service Provider</label>
