--- a/frontend/src/app/_helpers/simple-tiny/simple-tiny.component.html
+++ b/frontend/src/app/_helpers/simple-tiny/simple-tiny.component.html
@@ -1,1 +1,7 @@
-<textarea id="{{elementId}}" class="col-12" [mention]="items"></textarea>
+<!--<textarea id="{{elementId}}" class="col-12" [mention]="items"></textarea>-->
+<div class="form-group" style="position:relative">
+  <div [mention]="items"></div>
+  <div>
+    <textarea class="hidden" cols="60" rows="4" id="tmce">{{htmlContent}}</textarea>
+  </div>
+</div>
