--- a/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
+++ b/frontend/src/app/templates/email-templates/create-email-template-form/create-email-template-form.component.html
@@ -49,19 +49,19 @@
               <!--[mention]="suggestedList"-->
               <!--[mentionConfig]="{triggerChar:'$',maxItems:10,labelKey:'name'}"></textarea>-->
 
-    <ck-editor *ngIf="showRichTextEditor"
-               type="text"
-               placeholder="Email Body"
-               rows="8"
-               name="emailBody"
-               [(ngModel)]="emailTemplate.emailTemplateBody"
-               skin="moono-lisa"
-               lang="en"
-               [fullPage]="false"
-               ></ck-editor>
-<!--
-    <app-simple-tiny *ngIf="showRichTextEditor" [elementId]="'my-editor-id'" (onEditorKeyup)="keyupHandlerFunction($event)"></app-simple-tiny>
--->
+    <!--<ck-editor *ngIf="showRichTextEditor"-->
+               <!--type="text"-->
+               <!--placeholder="Email Body"-->
+               <!--rows="8"-->
+               <!--name="emailBody"-->
+               <!--[(ngModel)]="emailTemplate.emailTemplateBody"-->
+               <!--skin="moono-lisa"-->
+               <!--lang="en"-->
+               <!--[fullPage]="false"-->
+               <!--&gt;</ck-editor>-->
+    <!--<app-simple-tiny id="emailBody" *ngIf="showRichTextEditor"></app-simple-tiny>-->
+    <div>{{emailTemplate.emailTemplateBody}}</div>
+    <app-demo-tinymce id="emailBody" [(htmlContent)]="emailTemplate.emailTemplateBody"></app-demo-tinymce>
     <div class="text-right"><i class="fa fa-user" aria-hidden="true"></i></div>
   </div>
   <div class="text-right col-sm-12">
