--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,5 +1,6 @@
 html,body {
-  font-size: 13px;
-  background-color: #FAFAFA;
+  font-size: small;
+  font-family: arial,sans-serif;
+  /*background-color: #FAFAFA;*/
+  /*color: #606060;*/
 }
-
