--- a/frontend/src/app/segment-category/find-users/users-by-behaviour/users-by-behaviour.component.html
+++ b/frontend/src/app/segment-category/find-users/users-by-behaviour/users-by-behaviour.component.html
@@ -1,11 +1,11 @@
 <div class="card">
   <div class="card-header">
-    <i class="fas fa-users"></i> Users by behavior
+    <h4><i class="fas fa-users"></i> Users by behavior</h4>
   </div>
   <div class="card-body">
     <div class="card">
       <div class="card-body">
-        <div class="card-title"><h4 class="d-inline">Users who did </h4><span class="small text-muted">(optional)</span>
+        <div class="card-title"><div class="d-inline">Users who did </div><span class="small text-muted">(optional)</span>
         </div>
         <app-did-events [didEvents]="segment.didEvents"></app-did-events>
       </div>
