--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -14,7 +14,20 @@
                  placeholder="Campaign Name"
                  name="campaignName"
                  [(ngModel)]="campaignName"
+                 pattern="[A-Za-z][A-Za-z\\d_-\s]*"
+                 #campaignN="ngModel"
                  required>
+          <div *ngIf=" campaignN.errors.invalid && (campaignN.dirty || campaignN.touched)"
+               class="alert alert-danger">
+
+            <div *ngIf="campaignN.errors.required">
+              Name is required.
+            </div>
+            <div *ngIf="campaignN.errors.pattern">
+              Name cannot contain any speical characters.
+            </div>
+
+          </div>
         </div>
         <div class="form-group col-9">
           <label class="card-title h5">Who do you want to send this campaign to?</label>
