--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -1,32 +1,22 @@
-<!--appuserID: number;
-serviceProviderType: ServiceProviderType;
-serviceProvider: ServiceProvider;
-url: string;
-port: number;
-username: string;
-password: string;-->
-
 <!-- Button trigger modal -->
 <div class="text-right my-2 col-sm-11">
-<!--<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#serviceProviderModal">-->
-  <!--+ Add Service Provider-->
-<!--</button>-->
   <button class="btn btn-primary dropdown-toggle mb-3"
           type="button"
           id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-   + Add Service Provider
+    + Add Service Provider
   </button>
-  <div class="dropdown-menu">
-    <a class="dropdown-item"
-       data-target="#serviceProviderModal"
+  <div class="list-group dropdown-menu dropdown fade py-0">
+    <a class="list-group-item list-group-item-action dropdown-item"
+       href="#serviceProviderModal"
        data-toggle="modal"
        *ngFor="let serviceProviderType of serviceProviderTypes"
        (click)="onChangeServiceProviderType(serviceProviderType)">{{serviceProviderType}}</a>
   </div>
 </div>
 <!-- Modal -->
-<div *ngIf="serviceProviders.length>0"
-  class="modal fade" id="serviceProviderModal" tabindex="-1" role="dialog" aria-labelledby="serviceProviderModalLabel" aria-hidden="true">
+<div *ngIf=" serviceProviders.length>0 "
+     class="modal fade" id="serviceProviderModal" tabindex="-1" role="dialog"
+     aria-labelledby="serviceProviderModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -38,16 +28,6 @@ password: string;-->
       <div class="modal-body py-2 px-5">
         <div>
           <form novalidate (ngSubmit)="onSave(f)" #f="ngForm">
-            <div class="form-group">
-              <!--<label for="serviceProviderType">Service Provider Type</label>-->
-              <!--<select required class="form-control" id="serviceProviderType" name="serviceProviderType"-->
-                      <!--[(ngModel)]="serviceProviderCredentials.serviceProviderType"-->
-                      <!--(change)="onChangeServiceProviderType()">-->
-                <!--<option *ngFor="let serviceProviderType of serviceProviderTypes" value="{{serviceProviderType}}">-->
-                  <!--{{serviceProviderType}}-->
-                <!--</option>-->
-              <!--</select>-->
-            </div>
             <div class="form-group">
               <label for="serviceProvider">Service Provider</label>
               <select required class="form-control" id="serviceProvider" name="serviceProvider"
@@ -63,7 +43,7 @@ password: string;-->
                      [(ngModel)]="serviceProviderCredentials.credentialsMap[field.fieldName]">
             </div>
             <!--<div class="text-right">-->
-              <!--<button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>-->
+            <!--<button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>-->
             <!--</div>-->
           </form>
           <!--<div *ngFor="let serviceproviderType of getServiceProviderTypes()">-->
@@ -84,7 +64,7 @@ password: string;-->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>
+        <button type="submit" class="btn btn-primary" [disabled]="f.invalid" (click)="onSave()">Save</button>
       </div>
     </div>
   </div>
