--- a/frontend/src/app/settings/settings.component.html
+++ b/frontend/src/app/settings/settings.component.html
@@ -9,10 +9,10 @@
         Providers</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" [routerLink]="['account-settings']" [routerLinkActive]="['active']">Account Settings</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
+      <a class="nav-link" [routerLink]="['email-list']" [routerLinkActive]="['active']">Sender's Email</a>
     </li>
   </ul>
 </div>
