--- a/frontend/src/app/templates/email-templates/email-templates.component.html
+++ b/frontend/src/app/templates/email-templates/email-templates.component.html
@@ -45,7 +45,10 @@
         <td>{{et.from}}</td>
         <td>{{et.messageType}}</td>
         <td>{{et.emailTemplateBody}}</td>
-        <td><button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#exampleModalLong" (click)="onEdit(et)">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
+        <td><button class="btn btn-warning btn-sm"
+                    data-toggle="modal"
+                    data-target="#exampleModalLong"
+                    (click)="onEdit(et)">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
       </tr>
       </tbody>
     </table>
