"Account Settings Object added"

--- a/frontend/src/app/settings/email-list/email-list.component.html
+++ b/frontend/src/app/settings/email-list/email-list.component.html
@@ -11,7 +11,7 @@
         <thead>
           <tr class="bg-dark text-light">
             <th scope="col">#</th>
-            <th scope="col">Email List</th>
+            <th scope="col">Email Id</th>
           </tr>
         </thead>
         <tbody>
