--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -42,29 +42,16 @@
                      id="{{field.fieldName}}" name="{{field.fieldName}}"
                      [(ngModel)]="serviceProviderCredentials.credentialsMap[field.fieldName]">
             </div>
-            <!--<div class="text-right">-->
-            <!--<button type="submit" class="btn btn-primary" [disabled]="f.invalid">Save</button>-->
-            <!--</div>-->
           </form>
-          <!--<div *ngFor="let serviceproviderType of getServiceProviderTypes()">-->
-          <!--<div>-->
-          <!--{{serviceproviderType}}-->
-          <!--<div *ngFor="let serviceProvider of getServiceProviders(serviceproviderType)">-->
-          <!-- -&#45;&#45; {{serviceProvider}}-->
-          <!--<form novalidate>-->
-          <!--<div *ngFor="let field of getServiceProviderFields(serviceProvider, serviceproviderType)" class="form-group">-->
-          <!--<label for="{{field.fieldName}}">{{field.fieldDisplayName}}</label>-->
-          <!--<input required type="text" placeholder="{{field.fieldDisplayName}}" class="form-control" id="{{field.fieldName}}" name="{{field.fieldName}}">-->
-          <!--</div>-->
-          <!--</form>-->
-          <!--</div>-->
-          <!--</div>-->
-          <!--</div>-->
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary" [disabled]="f.invalid" (click)="onSave()">Save</button>
+        <button type="submit" class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#serviceProviderModal"
+                [disabled]="f.invalid" (click)="onSave()">Save
+        </button>
       </div>
     </div>
   </div>
@@ -84,26 +71,12 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-        <td>@mdo</td>
+      <tr *ngFor="let serviceProviderCredential of serviceProviderCredentialsList">
+        <th scope="row">{{serviceProviderCredential.id}}</th>
+        <td>{{serviceProviderCredential.serviceProviderType}}</td>
+        <td>{{serviceProviderCredential.serviceProvider}}</td>
+        <td>{{serviceProviderCredential.status}}</td>
+        <td>@Instagram</td>
       </tr>
       </tbody>
     </table>
