--- a/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
+++ b/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
@@ -2,6 +2,7 @@
   <div class="row mt-4">
     <div class="form-group col-6">
       <form #myForm="ngForm" novalidate>
+        <!--FIXME: Use the common daterange picker we are using everywhere else-->
         <my-date-range-picker name="mydaterange" [options]="myDateRangePickerOptions"
                               [(ngModel)]="model" required></my-date-range-picker>
       </form>
@@ -17,8 +18,9 @@
           class="fas fa-mobile-alt "></i> SMS</a>
         <a class="dropdown-item list-group-item list-group-item-action" [routerLink]="['email']" [routerLinkActive]="['active']"><i
           class="far fa-envelope"></i> Email</a>
-        <a class="dropdown-item list-group-item list-group-item-action" href="#"><i class="fal fa-mobile"></i> Mobile Push</a>
-        <a class="dropdown-item list-group-item list-group-item-action" href="#"><i class="fab fa-chrome"></i> Web Push</a>
+        <!--FIXME: USE Bootstrap class disabled-->
+        <a class="dropdown-item list-group-item list-group-item-action disabled"  disabled><i class="fal fa-mobile"></i> Mobile Push</a>
+        <a class="dropdown-item list-group-item list-group-item-action disabled"  disabled><i class="fab fa-chrome"></i> Web Push</a>
       </div>
     </div>
   </div>
@@ -47,8 +49,8 @@
           <span *ngIf="campaignItem.schedule.multipleDates!==null">Multiple Dates</span>
           <span *ngIf="campaignItem.schedule.recurring!==null">Recurring</span>
         </td>
-        <td>NA</td>
-        <td>NA</td>
+        <td>Coming Soon</td>
+        <td>Coming Soon</td>
         <td>Completed</td>
       </tr>
       </tbody>
