--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -18,11 +18,6 @@
                  pattern="[A-Za-z0-9-_][A-Za-z0-9\s-_]*"
                  #campaignN="ngModel"
                  required>
-
-          <!--<div class="feedback text-danger"-->
-          <!--*ngIf= " firstName.errors && (firstName.dirty || firstName.touched) ">-->
-          <!--<p *ngIf=" firstName.errors.required ">First name is required</p>-->
-          <!--</div>-->
           <div class="feedback text-danger" *ngIf="campaignN.errors && (campaignN.dirty || campaignN.touched)">
             <div *ngIf="campaignN.errors.required">
               Name is required.
@@ -127,7 +122,7 @@
                  value="Now"
                  id="now"
                  required
-                 [(ngModel)]="schedule1.oneTime.nowOrLater">
+                 [(ngModel)]="schedule.oneTime.nowOrLater">
           <label for="now">Now</label>
           <input class="mr-1 ml-2"
                  type="radio"
@@ -135,17 +130,17 @@
                  value="Later"
                  id="later"
                  required
-                 [(ngModel)]="schedule1.oneTime.nowOrLater">
+                 [(ngModel)]="schedule.oneTime.nowOrLater">
           <label for="later">Later</label>
-          <app-date-time *ngIf="schedule1.oneTime.nowOrLater==='Later'"
-                         [(campaignLaterTime)]="schedule1.oneTime.campaignTime"></app-date-time>
+          <app-date-time *ngIf="schedule.oneTime.nowOrLater==='Later'"
+                         [(campaignLaterTime)]="schedule.oneTime.campaignTime"></app-date-time>
 
         </div>
         <div class="col-9 mt-2"
              *ngIf="scheduleType==='multipleDates'">
           <label class="card-title mb-0 h5">Pick Dates</label>
           <br>
-          <app-date-time [campaignTimesList]="schedule1.multipleDates.campaignDateTimeList"></app-date-time>
+          <app-date-time [campaignTimesList]="schedule.multipleDates.campaignDateTimeList"></app-date-time>
           <div #parent></div>
           <button type="button"
                   class="btn btn-link py-0 pl-0 mb-2"
@@ -163,7 +158,7 @@
                  (selected)="campaignStartDateSelect($event)">
               <span class="form-control uneditable-input pr-2 col-6"
                     name="daterange">
-                {{ schedule1.recurring.scheduleStartDate | date:'dd/M/y'}}
+                {{ schedule.recurring.scheduleStartDate | date:'dd/M/y'}}
               </span>
               <span class="input-group-btn">
                 <a type="button" class="btn btn-default"><i class="far fa-calendar-alt"></i></a>
@@ -178,7 +173,7 @@
                    name="campaignEnd"
                    id="neverEnd"
                    value="NeverEnd"
-                   [(ngModel)]="schedule1.recurring.scheduleEnd.endType"
+                   [(ngModel)]="schedule.recurring.scheduleEnd.endType"
                    required
                   (change)="occurencesValueFalse=false;disableSubmit=false;">
             <label for="neverEnd">Never End</label>
@@ -186,7 +181,7 @@
                    type="radio"
                    name="campaignEnd"
                    value="EndsOnDate"
-                   [(ngModel)]="schedule1.recurring.scheduleEnd.endType"
+                   [(ngModel)]="schedule.recurring.scheduleEnd.endType"
                    id="selectDate"
                    (change)="occurencesValueFalse=false;disableSubmit=false;"
                    required>
@@ -195,7 +190,7 @@
                    type="radio"
                    name="campaignEnd"
                    value="Occurrences"
-                   [(ngModel)]="schedule1.recurring.scheduleEnd.endType"
+                   [(ngModel)]="schedule.recurring.scheduleEnd.endType"
                    id="afterOccurences"
                    (change)="checkOccurencesValue()">
             <label for="afterOccurences"
@@ -204,28 +199,28 @@
               <input type="number"
                      name="occurences"
                      class="form-control col-1"
-                     [(ngModel)]="schedule1.recurring.scheduleEnd.occurrences"
+                     [(ngModel)]="schedule.recurring.scheduleEnd.occurrences"
                     (change)="checkOccurencesValue()">
               occurences
             </label>
             <div class="text-danger" *ngIf="occurencesValueFalse">
                 <span>Occurences Value should Lie in the range 1-1000.</span>
             </div>
-            <div *ngIf="schedule1.recurring.scheduleEnd.endType==='EndsOnDate'"
+            <div *ngIf="schedule.recurring.scheduleEnd.endType==='EndsOnDate'"
                  class="input-group col-md-5 col-sm-6 col-xs-6 pl-0 mt-3 mb-2"
                  daterangepicker
                  [options]="singlePicker"
                  (selected)="campaignEndDateSelect($event)">
               <span class="form-control uneditable-input pr-2 col-6"
                     name="daterange">
-                  {{ schedule1.recurring.scheduleEnd.endsOn | date:'dd/M/y' }}
+                  {{ schedule.recurring.scheduleEnd.endsOn | date:'dd/M/y' }}
               </span>
               <span class="input-group-btn">
                 <a type="button" class="btn btn-default"><i class="far fa-calendar-alt"></i></a>
               </span>
             </div>
             <div class="text-danger"
-                 *ngIf="schedule1.recurring.scheduleEnd.endsOn<schedule1.recurring.scheduleStartDate && schedule1.recurring.scheduleEnd.endType==='EndsOnDate'">
+                 *ngIf="schedule.recurring.scheduleEnd.endsOn<schedule.recurring.scheduleStartDate && schedule.recurring.scheduleEnd.endType==='EndsOnDate'">
               <span>Campaign End Date should be equal to or greater than Start date.</span>
             </div>
           </div>
@@ -243,19 +238,19 @@
             Summary &#58;
           </span>
           Send {{scheduleType}}
-          <span *ngIf="schedule1 && schedule1.oneTime">
-            {{schedule1.oneTime.nowOrLater}}
+          <span *ngIf="schedule && schedule.oneTime">
+            {{schedule.oneTime.nowOrLater}}
           </span>
-          <p *ngIf="schedule1 && schedule1.oneTime && schedule1.oneTime.nowOrLater==='Later'"
+          <p *ngIf="schedule && schedule.oneTime && schedule.oneTime.nowOrLater==='Later'"
              class="d-inline">
             On
             <span class="mr-3">
-              {{schedule1.oneTime.campaignTime.date|date}} at {{schedule1.oneTime.campaignTime.hours}}:{{schedule1.oneTime.campaignTime.minutes}}
+              {{schedule.oneTime.campaignTime.date|date}} at {{schedule.oneTime.campaignTime.hours}}:{{schedule.oneTime.campaignTime.minutes}}
             </span>
           </p>
-          <p *ngIf="schedule1 && schedule1.multipleDates" class="d-inline">
+          <p *ngIf="schedule && schedule.multipleDates" class="d-inline">
             On
-            <span *ngFor="let campaignTime of schedule1.multipleDates.campaignDateTimeList"
+            <span *ngFor="let campaignTime of schedule.multipleDates.campaignDateTimeList"
                   class="mr-3">
               {{campaignTime.date|date}} at {{campaignTime.hours}}:{{campaignTime.minutes}}
             </span>
