--- a/frontend/src/app/settings/settings.component.html
+++ b/frontend/src/app/settings/settings.component.html
@@ -12,7 +12,7 @@
       <a class="nav-link" [routerLink]="['account-settings']" [routerLinkActive]="['active']">Account Settings</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['email-list']" [routerLinkActive]="['active']">Sender's Email</a>
+      <a class="nav-link" [routerLink]="['email-list']" [routerLinkActive]="['active']">Sender's Info</a>
     </li>
   </ul>
 </div>
