--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!--<div class="jumbotron">-->
 <div class="fluid">
   <!--<div class="col-sm-8 col-sm-offset-2">-->
+  <div class="mb-4">
   <app-header *ngIf="isLoggedIn()" class="loggedIn"></app-header><!--(logout)="logout()"-->
   <app-logout-header *ngIf="!isLoggedIn()" class="notLoggedIn"></app-logout-header><!--(loginEvent)="login()"-->
+  </div>
   <!--<div *ngIf="isLoggedIn()"></div>-->
   <div style="min-height:70vh">
     <router-outlet></router-outlet>
