--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,6 +1,6 @@
 html,body {
-  font-size: small;
-  font-family: arial,sans-serif;
+  /*font-size: small;*/
+  //font-family: 'Lato', sans-serif;
   /*background-color: #FAFAFA;*/
   /*color: #606060;*/
 }
